# Sibna-Protocol-beta

./: CONTRIBUTING.md  EXAMPLES.md  LICENSE  MANIFEST.in  PROTOCOL_TEST_RESULTS.md  README.md  TEST_SUMMARY.md  WHITEPAPER_FORMAL.md  pyproject.toml  requirements.txt  verify_all.py  whitepaper.md
sibna/: __init__.py  audit_logger.py  compression.py  config.py  crypto.py  errors.py  handshake.py  handshake_noise.py  jitter.py  key_manager.py  onion.py  packet.py  pki.py  ratchet.py  rate_limiter.py  replay_protection.py  session.py  session_async.py  sibna_core.cpp  stats.py  stealth.py  transport.py
sibna/transports/: base.py  dns.py  quic.py  webrtc.py
tests/: obsidian_keys.json  test_functional.py  test_handshake_compliance.py  test_message_format.py  test_security.py  test_stress.py
tools/: benchmark.py  check_environment.py  cleanup.py  generate_pdf.py  verify_advanced.py
